--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.454.0",
     "next": "13.4.19",
     "next-themes": "^0.4.4",
+    "openai": "^5.15.0",
     "react": "^18.3.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
