--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@huggingface/inference": "^4.7.1",
+    "@langchain/openai": "^0.6.9",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -45,6 +46,7 @@
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
+    "langchain": "^0.3.31",
     "lucide-react": "^0.454.0",
     "next": "13.4.19",
     "next-themes": "^0.4.4",
